<resources>
    <string name="editar">Edit</string>
    <string name="app_name" translatable="false">Smart Cities</string>
    <string name="remover">Delete</string>
    <string name="aviso_titulo">Insert title</string>
    <string name="aviso_desc">Insert description!</string>
    <string name="titulo">Title</string>
    <string name="criar_nota">Add Note</string>
    <string name="login" translatable="false">Login</string>
    <string name="aviso_email">Missign email</string>
    <string name="aviso_pass">Missing Password</string>
    <string name="pass_email_erro">Fields do not match</string>
    <string name="login_p" translatable="false">login_p</string>
    <string name="login_shared" translatable="false">login_shared</string>
    <string name="nome" translatable="false">nome</string>
    <string name="id_utl" translatable="false">id_utl</string>
    <string name="email_erro">Invalid Email</string>
    <string name="m_logout">Logout</string>
    <string name="m_notes">My notes</string>
    <string name="menu_opc" translatable="false">menu</string>
    <string name="back">There is no back action</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="update">Update</string>
    <string name="Delete">Delete</string>
    <string name="visualizar_anom">Can only access your reports</string>
    <string name="edit_sucess">Successfully edited</string>
    <string name="addAnom">Register</string>
    <string name="cancel">Cancel</string>
    <string name="obras">Construction</string>
    <string name="caminhos_agua">Waterways</string>
    <string name="acidente">Accident</string>
    <string name="parques">Parks</string>
    <string name="indefinido">Undefined</string>
    <string name="metros500" translatable="false">500 m</string>
    <string name="metros1500" translatable="false">1.5 KM</string>
    <string name="metros3000" translatable="false">3 KM</string>
    <string name="todos" translatable="false">All</string>
</resources>