<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity" >


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_plus"
            app:backgroundTint="@color/amarelo_torrado"
            app:elevation="6dp"
            app:fabSize="normal"
            android:onClick="add_anom"
            app:rippleColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/obras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/obras"
            app:backgroundTint="@color/amarelo_torrado"
            app:elevation="6dp"
            android:textSize="12dp"
            android:onClick="tipo_obras"
            android:tint="@color/white"
            app:rippleColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/acidente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="166dp"
            android:layout_marginTop="20dp"
            android:text="@string/acidente"
            app:backgroundTint="@color/amarelo_torrado"
            app:elevation="6dp"
            android:textSize="12dp"
            android:onClick="tipo_acidente"
            android:tint="@color/white"
            app:rippleColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/todos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="272dp"
            android:layout_marginTop="20dp"
            android:text="@string/todos"
            app:backgroundTint="@color/amarelo_torrado"
            app:elevation="6dp"
            android:textSize="12dp"
            android:onClick="tipo_todos"
            android:tint="@color/white"
            app:rippleColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/quinhentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="80dp"
            android:text="@string/metros500"
            app:backgroundTint="@color/amarelo_torrado"
            app:elevation="6dp"
            android:textSize="12dp"
            android:onClick="distancia_500"
            android:tint="@color/white"
            app:rippleColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mil_quinhentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="80dp"
            android:text="@string/metros1500"
            app:backgroundTint="@color/amarelo_torrado"
            app:elevation="6dp"
            android:textSize="12dp"
            android:onClick="distancia_1500"
            android:tint="@color/white"
            app:rippleColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tres_mil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="216dp"
            android:layout_marginTop="80dp"
            android:text="@string/metros3000"
            app:backgroundTint="@color/amarelo_torrado"
            app:elevation="6dp"
            android:textSize="12dp"
            android:onClick="distancia_3000"
            android:tint="@color/white"
            app:rippleColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</fragment>